--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,26 @@
       <scope>provided</scope>
     </dependency>
 
+    <!--HIBERNATE-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.8-dmr</version>
+      <!--<version>RELEASE</version>-->
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.1.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>4.3.1.Final</version>
+    </dependency>
+    <!--HIBERNATE-->
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
